--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,7 @@ nav {
 
 /* Home page */
 .banner {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("../images/img-1_172862932108225.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("../images/img-1.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
